set max-width on editor to prevent horizontal overflow

--- a/src/components/rich-text-editor/rich-text-editor.scss
+++ b/src/components/rich-text-editor/rich-text-editor.scss
@@ -2,6 +2,7 @@
 
 .rich-text-editor {
   width: $page-width;
+  max-width: 100%;
   min-height: $page-height;
 
   .ql-container {
